--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "barryvdh/laravel-debugbar": "^2.3",
         "cviebrock/eloquent-sluggable": "^4.2",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4.1",
+        "yajra/laravel-datatables-html": "1.0",
+        "yajra/laravel-datatables-oracle": "7.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
